added plasma discover

--- a/userprefs.conf
+++ b/userprefs.conf
@@ -30,7 +30,7 @@ bind = $mainMod, Y, exec, $term --class clock --title clock tty-clock -c -n -C7 
 bind = $mainMod SHIFT, Y, exec, $term --title cava --class cava cava
 bind = SHIFT, F10, exec, ~/.config/hypr/scripts/volumecontrol.sh -i m # toggle microphone mute
 bind = $mainMod, O, exec, /usr/bin/octopi
-
+bind = $mainMod, D, exec, plasma-discover
 
 
 
