--- a/monitors.conf
+++ b/monitors.conf
@@ -1,5 +1,11 @@
 # change monitor to high resolution, the last argument is the scale factor
-monitor=eDP-1,1920x1080@144,auto,1.25
+monitor=eDP-1,1920x1080@144,0x0,1.25
+#make this one primary
+xrandr --output eDP-1 --primary
+
+#Monitor TV
+monitor=DP-1,4096x2160@60,-1080x-1920,auto
+exec-once=wlr-randr --output DP-1 --off && sleep 3 && wlr-randr --output DP-1 --on --pos -1080,-1920
 
 # unscale XWayland
 xwayland {
