added more scripts

--- a/monitors.conf
+++ b/monitors.conf
@@ -1,11 +1,13 @@
 # change monitor to high resolution, the last argument is the scale factor
 monitor=eDP-1,1920x1080@144,0x0,1.25
 #make this one primary
-xrandr --output eDP-1 --primary
+#exec-once=xrandr --output eDP-1 --primary
 
 #Monitor TV
-monitor=DP-1,4096x2160@60,-1080x-2160,auto
-exec-once=wlr-randr --output DP-1 --off && sleep 3 && wlr-randr --output DP-1 --on --pos -1080,-2160
+#monitor=DP-1,1920x1080@60,-1080x-2160,auto
+monitor=DP-1,1920x1080@60,0x-1536,0.7
+#exec-once=wlr-randr --output DP-1 --off && sleep 3 && wlr-randr --output DP-1 --on --pos -1080,-2160
+exec-once=wlr-randr --output DP-1 --off && sleep 3 && wlr-randr --output DP-1 --on --pos 0x-1536
 
 # unscale XWayland
 xwayland {
