--- a/userprefs.conf
+++ b/userprefs.conf
@@ -55,7 +55,7 @@ windowrulev2 = opacity 0.80 0.80,class:^(jack_mixer)$
 windowrulev2 = opacity 0.80 0.80,class:^(stacer)$
 windowrulev2 = opacity 0.80 0.80,class:^(lutris)$
 windowrulev2 = opacity 0.80 0.80,class:^(org.kde.discover)$
-windowrulev2 = opacity 0.80 0.80,class:^()$
+windowrulev2 = opacity 0.80 0.80,class:^(org.https://nomacs.nomacs)$
 windowrulev2 = opacity 0.80 0.80,class:^()$
 windowrulev2 = opacity 0.80 0.80,class:^()$
 windowrulev2 = opacity 0.80 0.80,class:^()$
