added more configs

--- a/userprefs.conf
+++ b/userprefs.conf
@@ -68,6 +68,7 @@ windowrulev2 = opacity 0.80 0.80,class:^()$
 windowrulev2 = float,class:^(firewall-config)$
 windowrulev2 = float,class:^(octopi-sudo)$
 windowrulev2 = float,class:^(octopi-repoeditor)$
+windowrulev2 = float,class:^(org.kde.keditfiletype)
 
 
 # for tty-clock
