added more configs

--- a/userprefs.conf
+++ b/userprefs.conf
@@ -3,7 +3,7 @@
 
 exec-once = dapper -e /home/simp/.config/autostart/
 exec-once = dapper -s 
-
+exec-once = ~/.config/hypr/scripts/swayidlelock.sh
 
 
 
