--- a/userprefs.conf
+++ b/userprefs.conf
@@ -2,9 +2,8 @@
 # █▄▄ █▀█ █▄█ █░▀█ █▄▄ █▀█
 
 exec-once = dapper -e /home/simp/.config/autostart/
-exec-once = dapper -s 
-exec-once = ~/.config/hypr/scripts/swayidlelock.sh
-
+exec-once = dapper -s
+exec = ~/.config/hypr/scripts/swaysleep.sh
 
 
 
@@ -24,14 +23,15 @@ input {
 
 # main modifier
 $mainMod = SUPER # windows key
-$term = kitty
+$term = kitty #kitty terminal
+$xterm = alacritty #Alacritty terminal
 
 bind = $mainMod, Y, exec, $term --class clock --title clock tty-clock -c -n -C7 -t -f '%Y %b %d %a' # kitty clock
 bind = $mainMod SHIFT, Y, exec, $term --title cava --class cava cava
 bind = SHIFT, F10, exec, ~/.config/hypr/scripts/volumecontrol.sh -i m # toggle microphone mute
 bind = $mainMod, O, exec, /usr/bin/octopi
 bind = $mainMod, D, exec, plasma-discover
-
+bind = $mainMod SHIFT, M, exec, $xterm --class matrix --title matrix -e neo-matrix
 
 
 
@@ -69,6 +69,11 @@ windowrulev2 = float,class:^(firewall-config)$
 windowrulev2 = float,class:^(octopi-sudo)$
 windowrulev2 = float,class:^(octopi-repoeditor)$
 windowrulev2 = float,class:^(org.kde.keditfiletype)
+
+
+#for neo-matrix 
+windowrulev2 = float,class:^(matrix)
+
 
 
 # for tty-clock
