--- a/userprefs.conf
+++ b/userprefs.conf
@@ -3,8 +3,8 @@
 
 exec-once = dapper -e /home/simp/.config/autostart/
 exec-once = dapper -s
-exec = ~/.config/hypr/scripts/swaysleep.sh
-
+exec-once = gnome-keyring-daemon --start
+exec-once = swayidle -w timeout 30 'if pgrep -x swaylock; then hyprctl dispatch dpms off; fi' timeout 600 'hyprctl dispatch dpms off' timeout 900 'swaylock' resume 'hyprctl dispatch dpms on'    
 
 
 # █ █▄░█ █▀█ █░█ ▀█▀
@@ -15,6 +15,22 @@ input {
     #numlock by default
     numlock_by_default = true
 }
+
+
+# █▀▄▀█ █ █▀ █▀▀
+# █░▀░█ █ ▄█ █▄▄
+
+
+#sleep and wake
+misc { mouse_move_enables_dpms = true
+            key_press_enables_dpms = true
+            allow_session_lock_restore = true
+
+}
+
+
+
+
 
 
 # █▄▀ █▀▀ █▄█ █▄▄ █ █▄░█ █▀▄ █ █▄░█ █▀▀ █▀
