--- a/userprefs.conf
+++ b/userprefs.conf
@@ -20,11 +20,20 @@ input {
 # █▀▄▀█ █ █▀ █▀▀
 # █░▀░█ █ ▄█ █▄▄
 
+decoration {
 
+
+    blur { special = true
+
+    }
+
+
+} 
 #sleep and wake
 misc { mouse_move_enables_dpms = true
-            key_press_enables_dpms = true
-            allow_session_lock_restore = true
+        key_press_enables_dpms = true
+        allow_session_lock_restore = true
+        animate_manual_resizes = true
 
 }
 
@@ -85,6 +94,7 @@ windowrulev2 = float,class:^(firewall-config)$
 windowrulev2 = float,class:^(octopi-sudo)$
 windowrulev2 = float,class:^(octopi-repoeditor)$
 windowrulev2 = float,class:^(org.kde.keditfiletype)
+windowrulev2 = opacity 0.80 0.80,fullscreen:1,class:^(kitty)
 
 
 #for neo-matrix 
