--- a/userprefs.conf
+++ b/userprefs.conf
@@ -1,112 +1,1 @@
-# █░░ ▄▀█ █░█ █▄░█ █▀▀ █░█
-# █▄▄ █▀█ █▄█ █░▀█ █▄▄ █▀█
-
-exec-once = dapper -e /home/simp/.config/autostart/
-exec-once = dapper -s
-exec-once = gnome-keyring-daemon --start
-exec-once = swayidle -w timeout 30 'if pgrep -x swaylock; then hyprctl dispatch dpms off; fi' timeout 600 'hyprctl dispatch dpms off' timeout 900 'swaylock' resume 'hyprctl dispatch dpms on'    
-
-
-# █ █▄░█ █▀█ █░█ ▀█▀
-# █ █░▀█ █▀▀ █▄█ ░█░
-
- 
-input {
-    #numlock by default
-    numlock_by_default = true
-}
-
-
-# █▀▄▀█ █ █▀ █▀▀
-# █░▀░█ █ ▄█ █▄▄
-
-decoration {
-
-
-    blur { special = true
-
-    }
-
-
-} 
-#sleep and wake
-misc { mouse_move_enables_dpms = true
-        key_press_enables_dpms = true
-        allow_session_lock_restore = true
-        animate_manual_resizes = true
-
-}
-
-
-
-
-
-
-# █▄▀ █▀▀ █▄█ █▄▄ █ █▄░█ █▀▄ █ █▄░█ █▀▀ █▀
-# █░█ ██▄ ░█░ █▄█ █ █░▀█ █▄▀ █ █░▀█ █▄█ ▄█
-
-
-# main modifier
-$mainMod = SUPER # windows key
-$term = kitty #kitty terminal
-$xterm = alacritty #Alacritty terminal
-
-bind = $mainMod, Y, exec, $term --class clock --title clock tty-clock -c -n -C7 -t -f '%Y %b %d %a' # kitty clock
-bind = $mainMod SHIFT, Y, exec, $term --title cava --class cava cava
-bind = SHIFT, F10, exec, ~/.config/hypr/scripts/volumecontrol.sh -i m # toggle microphone mute
-bind = $mainMod, O, exec, /usr/bin/octopi
-bind = $mainMod, D, exec, plasma-discover
-bind = $mainMod SHIFT, M, exec, $xterm --class matrix --title matrix -e neo-matrix
-
-
-
-
-
-# █░█░█ █ █▄░█ █▀▄ █▀█ █░█░█   █▀█ █░█ █░░ █▀▀ █▀
-# ▀▄▀▄▀ █ █░▀█ █▄▀ █▄█ ▀▄▀▄▀   █▀▄ █▄█ █▄▄ ██▄ ▄█
-
-
-
-windowrulev2 = opacity 0.80 0.80,class:^(octopi)$
-windowrulev2 = opacity 0.80 0.80,class:^(firewall-config)$
-windowrulev2 = opacity 0.80 0.80,class:^(org.gnome.Meld)$
-windowrulev2 = opacity 0.80 0.80,class:^(org.cachyos.cachyos-kernel-manager)$
-windowrulev2 = opacity 0.80 0.80,class:^(vlc)$
-windowrulev2 = opacity 0.80 0.80,class:^(org.manjaro.pamac.manager)$
-windowrulev2 = opacity 0.80 0.80,class:^(org.telegram.desktop)$
-windowrulev2 = opacity 0.80 0.80,class:^(com.github.wwmm.easyeffects)$
-windowrulev2 = opacity 0.80 0.80,class:^(org.rncbc.qjackctl)$
-windowrulev2 = opacity 0.80 0.80,class:^(jack_mixer)$
-windowrulev2 = opacity 0.80 0.80,class:^(stacer)$
-windowrulev2 = opacity 0.80 0.80,class:^(lutris)$
-windowrulev2 = opacity 0.80 0.80,class:^(org.kde.discover)$
-windowrulev2 = opacity 0.80 0.80,class:^(org.https://nomacs.nomacs)$
-windowrulev2 = opacity 0.80 0.80,class:^()$
-windowrulev2 = opacity 0.80 0.80,class:^()$
-windowrulev2 = opacity 0.80 0.80,class:^()$
-windowrulev2 = opacity 0.80 0.80,class:^()$
-windowrulev2 = opacity 0.80 0.80,class:^()$
-
-
-
-
-windowrulev2 = float,class:^(firewall-config)$
-windowrulev2 = float,class:^(octopi-sudo)$
-windowrulev2 = float,class:^(octopi-repoeditor)$
-windowrulev2 = float,class:^(org.kde.keditfiletype)
-windowrulev2 = opacity 0.80 0.80,fullscreen:1,class:^(kitty)
-
-
-#for neo-matrix 
-windowrulev2 = float,class:^(matrix)
-
-
-
-# for tty-clock
-windowrulev2 = float, class:^(clock)$, title:^(clock)$
-windowrulev2 = size 30% 28%, class:^(clock)$, title:^(clock)$
-windowrulev2 = center, class:^(clock)$, title:^(clock)$
-
-# for cava
-windowrulev2 = float, class:^(cava)$, title:^(cava)$
-windowrulev2 = size 50% 25%, class:^(cava)$, title:^(cava)$
+/home/simp/.config/hypr/userprefs.conf
