--- a/userprefs.conf
+++ b/userprefs.conf
@@ -59,6 +59,7 @@ bind = $mainMod, O, exec, /usr/bin/octopi
 bind = $mainMod, D, exec, plasma-discover
 bind = $mainMod SHIFT, M, exec, $xterm --class matrix --title matrix -e neo-matrix
 bind = $mainMod SHIFT, G, exec, pkill rofi || ~/.config/hypr/scripts/gamelauncher.sh 4
+bind = $mainMod SHIFT, E, exec, $term --class lf lf
 
 
 
