--- a/userprefs.conf
+++ b/userprefs.conf
@@ -59,7 +59,8 @@ bind = $mainMod, O, exec, /usr/bin/octopi
 bind = $mainMod, D, exec, plasma-discover
 bind = $mainMod SHIFT, M, exec, $xterm --class matrix --title matrix -e neo-matrix
 bind = $mainMod SHIFT, G, exec, pkill rofi || ~/.config/hypr/scripts/gamelauncher.sh 4
-bind = $mainMod SHIFT, E, exec, $term --class lf lf
+bind = ALT, E, exec, $term --class lf lf
+bind = ALT, A, exec, pkill rofi || ~/.config/hypr/scripts/quickapps.sh telegram-desktop discord steam io.elementary.calendar obs stacer protonvpn qjackctl
 
 
 
@@ -83,8 +84,8 @@ windowrulev2 = opacity 0.80 0.80,class:^(stacer)$
 windowrulev2 = opacity 0.80 0.80,class:^(lutris)$
 windowrulev2 = opacity 0.80 0.80,class:^(org.kde.discover)$
 windowrulev2 = opacity 0.80 0.80,class:^(org.https://nomacs.nomacs)$
-windowrulev2 = opacity 0.80 0.80,class:^()$
-windowrulev2 = opacity 0.80 0.80,class:^()$
+windowrulev2 = opacity 0.80 0.80,class:^(lf)$
+windowrulev2 = opacity 0.80 0.80,class:^(tuxedo-control-center)$
 windowrulev2 = opacity 0.80 0.80,class:^()$
 windowrulev2 = opacity 0.80 0.80,class:^()$
 windowrulev2 = opacity 0.80 0.80,class:^()$
@@ -97,7 +98,13 @@ windowrulev2 = float,class:^(octopi-sudo)$
 windowrulev2 = float,class:^(org.https://nomacs.nomacs)
 windowrulev2 = float,class:^(octopi-repoeditor)$
 windowrulev2 = float,class:^(org.kde.keditfiletype)
-windowrulev2 = opacity 0.80 0.80,fullscreen:1,class:^(kitty)
+
+
+
+
+#tuxedo control center
+windowrulev2 = float,class:^(tuxedo-control-center)
+windowrulev2 = size 80% 70%,class:^(tuxedo-control-center)
 
 
 #for neo-matrix 
