fied some things

--- a/userprefs.conf
+++ b/userprefs.conf
@@ -60,7 +60,7 @@ bind = $mainMod, D, exec, plasma-discover
 bind = $mainMod SHIFT, M, exec, $xterm --class matrix --title matrix -e neo-matrix
 bind = $mainMod SHIFT, G, exec, pkill rofi || ~/.config/hypr/scripts/gamelauncher.sh 4
 bind = ALT, E, exec, $term --class lf lf
-bind = ALT, A, exec, pkill rofi || ~/.config/hypr/scripts/quickapps.sh telegram-desktop discord steam obs stacer qjackctl protonvpn 
+bind = ALT, A, exec, pkill rofi || ~/.config/hypr/scripts/quickapps.sh telegram-desktop discord steam obs stacer qjackctl gnome-calendar protonvpn 
 
 
 
