--- a/userprefs.conf
+++ b/userprefs.conf
@@ -6,7 +6,7 @@ exec-once = dapper -s
 exec-once = gnome-keyring-daemon --start
 exec-once = clevo-indicator
 exec-once = swayidle -w timeout 30 'if pgrep -x swaylock; then hyprctl dispatch dpms off; fi' timeout 600 'hyprctl dispatch dpms off' timeout 900 'swaylock' resume 'hyprctl dispatch dpms on'    
-
+exec-once = ~/.config/hypr/scripts/hibernatelowbat.sh
 
 # █ █▄░█ █▀█ █░█ ▀█▀
 # █ █░▀█ █▀▀ █▄█ ░█░
@@ -60,7 +60,9 @@ bind = $mainMod, D, exec, plasma-discover
 bind = $mainMod SHIFT, M, exec, $xterm --class matrix --title matrix -e neo-matrix
 bind = $mainMod SHIFT, G, exec, pkill rofi || ~/.config/hypr/scripts/gamelauncher.sh 4
 bind = ALT, E, exec, $term --class lf lf
-bind = ALT, A, exec, pkill rofi || ~/.config/hypr/scripts/quickapps.sh telegram-desktop discord steam obs stacer qjackctl gnome-calendar protonvpn 
+
+#Quicklaunch apps
+bind = ALT, A, exec, pkill rofi || ~/.config/hypr/scripts/quickapps.sh telegram-desktop discord steam obs stacer qjackctl gnome-calendar protonvpn
 
 
 
