edited user conf

--- a/userprefs.conf
+++ b/userprefs.conf
@@ -6,7 +6,6 @@ exec-once = dapper -s
 exec-once = gnome-keyring-daemon --start
 exec-once = clevo-indicator
 exec-once = swayidle -w timeout 30 'if pgrep -x swaylock; then hyprctl dispatch dpms off; fi' timeout 600 'hyprctl dispatch dpms off' timeout 900 'swaylock' resume 'hyprctl dispatch dpms on'    
-
 # █ █▄░█ █▀█ █░█ ▀█▀
 # █ █░▀█ █▀▀ █▄█ ░█░
 
@@ -96,20 +95,20 @@ windowrulev2 = opacity 0.80 0.80,class:^()$
 
 windowrulev2 = float,class:^(firewall-config)$
 windowrulev2 = float,class:^(octopi-sudo)$
-windowrulev2 = float,class:^(org.https://nomacs.nomacs)
+windowrulev2 = float,class:^(org.https://nomacs.nomacs)$
 windowrulev2 = float,class:^(octopi-repoeditor)$
-windowrulev2 = float,class:^(org.kde.keditfiletype)
-
+windowrulev2 = float,class:^(org.kde.keditfiletype)$
+windowrulev2 = float,class:^(zenity)$
 
 
 
 #tuxedo control center
-windowrulev2 = float,class:^(tuxedo-control-center)
-windowrulev2 = size 80% 70%,class:^(tuxedo-control-center)
+windowrulev2 = float,class:^(tuxedo-control-center)$
+windowrulev2 = size 80% 70%,class:^(tuxedo-control-center)$
 
 
 #for neo-matrix 
-windowrulev2 = float,class:^(matrix)
+windowrulev2 = float,class:^(matrix)$
 
 
 
