--- a/monitors.conf
+++ b/monitors.conf
@@ -1,21 +1,44 @@
+#     __  __             _ _               _                _                  #
+#    |  \/  | ___  _ __ (_) |_ ___  _ __  | |    __ _ _ __ | |_ ___  _ __      #
+#    | |\/| |/ _ \| '_ \| | __/ _ \| '__| | |   / _` | '_ \| __/ _ \| '_ \     #
+#    | |  | | (_) | | | | | || (_) | |    | |__| (_| | |_) | || (_) | |_) |    #
+#    |_|  |_|\___/|_| |_|_|\__\___/|_|    |_____\__,_| .__/ \__\___/| .__/     #
+#                                                    |_|            |_|        #
+#                                                                              #
+
 # change monitor to high resolution, the last argument is the scale factor
-monitor=eDP-1,1920x1080@144,0x0,1.25
-
-#make this one primary
-#xrandr --output eDP-1 --primary
-
-#Monitor TV
-
-#monitor=DP-1,1920x1080@60,-1080x-2160,auto
-monitor=DP-1,1920x1080@60,0x-1536,0.7
-
-#exec-once=wlr-randr --output DP-1 --off && sleep 3 && wlr-randr --output DP-1 --on --pos -1080,-2160
-#exec-once=wlr-randr --output DP-1 --off && sleep 3 && wlr-randr --output DP-1 --on --pos 0x-1536
-
-# unscale XWayland
-xwayland {
+monitor=eDP-1,1920x1080@144,0x0,1.25{
+  xwayland {
   force_zero_scaling = true
+  env = GDK_SCALE,1.25
+}
 }
 
+
+#                                                         #
+#   __  __             _ _               _______     __   #
+#  |  \/  | ___  _ __ (_) |_ ___  _ __  |_   _\ \   / /   #
+#  | |\/| |/ _ \| '_ \| | __/ _ \| '__|   | |  \ \ / /    #
+#  | |  | | (_) | | | | | || (_) | |      | |   \ V /     #
+#  |_|  |_|\___/|_| |_|_|\__\___/|_|      |_|    \_/      #
+#                                                         #
+
+
+#monitor=DP-1,1920x1080@60,-1080x-2160,auto
+monitor=DP-1,1920x1080@60,-650x-1536,0.7{
+  env = GDK_SCALE,1.25
+}
+#                                                                                                #
+#     ____                     _     _                                    _                 _    #
+#    / ___| _   _ _____      _(_) __| | ___    __  ____      ____ _ _   _| | __ _ _ __   __| |   #
+#    \___ \| | | / __\ \ /\ / / |/ _` |/ _ \   \ \/ /\ \ /\ / / _` | | | | |/ _` | '_ \ / _` |   #
+#     ___) | |_| \__ \\ V  V /| | (_| |  __/    >  <  \ V  V / (_| | |_| | | (_| | | | | (_| |   #
+#    |____/ \__, |___/ \_/\_/ |_|\__,_|\___|   /_/\_\  \_/\_/ \__,_|\__, |_|\__,_|_| |_|\__,_|   #
+#           |___/                                                   |___/                        #
+#                                                                                                #
+# unscale XWayland
+#  xwayland {
+#  force_zero_scaling = true
+#}
 # toolkit-specific scale
-env = GDK_SCALE,1.25
+#env = GDK_SCALE,1.25
