added hypr conf and game mode

--- a/userprefs.conf
+++ b/userprefs.conf
@@ -56,13 +56,13 @@ bind = SHIFT, F10, exec, ~/.config/hypr/scripts/volumecontrol.sh -i m # toggle m
 bind = $mainMod, O, exec, /usr/bin/octopi
 bind = $mainMod, D, exec, plasma-discover
 bind = $mainMod SHIFT, M, exec, $xterm --class matrix --title matrix -e neo-matrix
-bind = $mainMod SHIFT, G, exec, pkill rofi || ~/.config/hypr/scripts/gamelauncher.sh 4
 bind = ALT, E, exec, $term --class lf lf
 
 #Quicklaunch apps
 bind = ALT, A, exec, pkill rofi || ~/.config/hypr/scripts/quickapps.sh telegram-desktop discord steam obs stacer qjackctl gnome-calendar protonvpn
 
-
+#game launcher
+bind = $mainMod SHIFT, G, exec, pkill rofi || rofi -modi games -show games -show-icons -theme games
 
 
 # █░█░█ █ █▄░█ █▀▄ █▀█ █░█░█   █▀█ █░█ █░░ █▀▀ █▀
@@ -86,10 +86,15 @@ windowrulev2 = opacity 0.80 0.80,class:^(org.kde.discover)$
 windowrulev2 = opacity 0.80 0.80,class:^(org.https://nomacs.nomacs)$
 windowrulev2 = opacity 0.80 0.80,class:^(lf)$
 windowrulev2 = opacity 0.80 0.80,class:^(tuxedo-control-center)$
+windowrulev2 = opacity 0.80 0.80,class:^(google-chrome)$
+windowrulev2 = opacity 0.80 0.80,class:^(org.gnome.Calendar)$
 windowrulev2 = opacity 0.80 0.80,class:^()$
 windowrulev2 = opacity 0.80 0.80,class:^()$
 windowrulev2 = opacity 0.80 0.80,class:^()$
-
+windowrulev2 = opacity 0.80 0.80,class:^()$
+windowrulev2 = opacity 0.80 0.80,class:^()$
+windowrulev2 = opacity 0.80 0.80,class:^()$
+windowrulev2 = opacity 0.80 0.80,class:^()$
 
 
 
