added google chrome

--- a/userprefs.conf
+++ b/userprefs.conf
@@ -50,6 +50,7 @@ $mainMod = SUPER # windows key
 $term = kitty #kitty terminal
 $xterm = alacritty #Alacritty terminal
 
+bind = $mainMod, B, exec, google-chrome-stable
 bind = $mainMod, Y, exec, $term --class clock --title clock tty-clock -c -n -C7 -t -f '%Y %b %d %a' # kitty clock
 bind = $mainMod SHIFT, Y, exec, $term --title cava --class cava cava
 bind = SHIFT, F10, exec, ~/.config/hypr/scripts/volumecontrol.sh -i m # toggle microphone mute
