added more fixes with workspaces config

--- a/userprefs.conf
+++ b/userprefs.conf
@@ -1,3 +1,8 @@
+#sources ...
+
+source = ~/.config/hypr/workspaces.conf
+
+
 # █░░ ▄▀█ █░█ █▄░█ █▀▀ █░█
 # █▄▄ █▀█ █▄█ █░▀█ █▄▄ █▀█
 
@@ -58,6 +63,10 @@ bind = $mainMod, O, exec, /usr/bin/octopi
 bind = $mainMod, D, exec, plasma-discover
 bind = $mainMod SHIFT, M, exec, $xterm --class matrix --title matrix -e neo-matrix
 bind = ALT, E, exec, $term --class lf lf
+
+
+# Scroll through existing workspaces with mainMod + scroll
+bind = $mainMod SHIFT, Tab, workspace, e+1
 
 #Quicklaunch apps
 bind = ALT, A, exec, pkill rofi || ~/.config/hypr/scripts/quickapps.sh telegram-desktop discord steam obs stacer qjackctl gnome-calendar protonvpn
