--- a/userprefs.conf
+++ b/userprefs.conf
@@ -6,6 +6,7 @@ source = ~/.config/hypr/workspaces.conf
 # █░░ ▄▀█ █░█ █▄░█ █▀▀ █░█
 # █▄▄ █▀█ █▄█ █░▀█ █▄▄ █▀█
 
+exec-once = xsettingsd
 exec-once = dapper -e /home/simp/.config/autostart/
 exec-once = dapper -s
 exec-once = gnome-keyring-daemon --start
