--- a/userprefs.conf
+++ b/userprefs.conf
@@ -18,6 +18,7 @@ exec-once = swayidle -w timeout 30 'if pgrep -x swaylock; then hyprctl dispatch 
 input {
     #numlock by default
     numlock_by_default = true
+    force_no_accel = 1
 }
 
 
@@ -34,9 +35,9 @@ decoration {
 
 } 
 #sleep and wake
-misc { mouse_move_enables_dpms = true
+misc { mouse_move_enables_dpms = 1
         key_press_enables_dpms = true
-        allow_session_lock_restore = true
+        allow_session_lock_restore = 1
         animate_manual_resizes = true
 
 }
@@ -74,6 +75,8 @@ bind = ALT, A, exec, pkill rofi || ~/.config/hypr/scripts/quickapps.sh telegram-
 #game launcher
 bind = $mainMod SHIFT, G, exec, pkill rofi || rofi -modi games -show games -show-icons -theme games
 
+#pywallgen
+bind = $mainMod ALT, D, exec, ~/.config/hypr/scripts/pywal.sh
 
 # █░█░█ █ █▄░█ █▀▄ █▀█ █░█░█   █▀█ █░█ █░░ █▀▀ █▀
 # ▀▄▀▄▀ █ █░▀█ █▄▀ █▄█ ▀▄▀▄▀   █▀▄ █▄█ █▄▄ ██▄ ▄█
@@ -116,6 +119,8 @@ windowrulev2 = float,class:^(org.kde.keditfiletype)$
 windowrulev2 = float,class:^(zenity)$
 
 
+##Csgo2 make full screen
+windowrulev2 = fullscreen,class:^(cs2)$
 
 #tuxedo control center
 windowrulev2 = float,class:^(tuxedo-control-center)$
