--- a/userprefs.conf
+++ b/userprefs.conf
@@ -1,7 +1,7 @@
 #sources ...
 
 source = ~/.config/hypr/workspaces.conf
-
+source = ~/.config/hypr/envv.conf
 
 # █░░ ▄▀█ █░█ █▄░█ █▀▀ █░█
 # █▄▄ █▀█ █▄█ █░▀█ █▄▄ █▀█
