--- a/userprefs.conf
+++ b/userprefs.conf
@@ -63,18 +63,19 @@ bind = $mainMod SHIFT, Y, exec, $term --title cava --class cava cava
 bind = SHIFT, F10, exec, ~/.config/hypr/scripts/volumecontrol.sh -i m # toggle microphone mute
 bind = $mainMod, O, exec, /usr/bin/octopi
 bind = $mainMod, D, exec, plasma-discover
-bind = $mainMod SHIFT, M, exec, $xterm --class matrix --title matrix -e neo-matrix
 bind = ALT, E, exec, $term --class lf lf
 
+#neomatrix
+bind = $mainMod SHIFT, M, exec, $xterm --class matrix --title matrix -e neo-matrix
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod SHIFT, Tab, workspace, e+1
 
 #Quicklaunch apps
-bind = ALT, A, exec, pkill rofi || ~/.config/hypr/scripts/quickapps.sh telegram-desktop discord steam obs stacer qjackctl gnome-calendar protonvpn
+bind = ALT, A, exec, pkill rofi || ~/.config/hypr/scripts/quickapps.sh telegram-desktop discord steam obs stacer qjackctl protonvpn
 
 #game launcher
-bind = $mainMod SHIFT, G, exec, pkill rofi || rofi -modi games -show games -show-icons -theme games
+bind = $mainMod SHIFT, G, exec, pkill rofi || ~/.config/hypr/scripts/gamelauncher.sh 4
 
 #pywallgen
 bind = $mainMod ALT, D, exec, ~/.config/hypr/scripts/pywal.sh
@@ -102,7 +103,7 @@ windowrulev2 = opacity 0.80 0.80,class:^(lf)$
 windowrulev2 = opacity 0.80 0.80,class:^(tuxedo-control-center)$
 windowrulev2 = opacity 0.80 0.80,class:^(google-chrome)$
 windowrulev2 = opacity 0.80 0.80,class:^(org.gnome.Calendar)$
-windowrulev2 = opacity 0.80 0.80,class:^()$
+windowrulev2 = opacity 0.70 0.70,class:^(Alacritty)$
 windowrulev2 = opacity 0.80 0.80,class:^()$
 windowrulev2 = opacity 0.80 0.80,class:^()$
 windowrulev2 = opacity 0.80 0.80,class:^()$
