--- a/userprefs.conf
+++ b/userprefs.conf
@@ -26,15 +26,12 @@ input {
 # █▀▄▀█ █ █▀ █▀▀
 # █░▀░█ █ ▄█ █▄▄
 
-decoration {
-
-
-    blur { special = true
-
+decoration {	
+dim_special = 0.5
+    blur { special = tru
     }
-
-
 } 
+
 #sleep and wake
 misc { mouse_move_enables_dpms = 1
         key_press_enables_dpms = true
