fixed some stufffs

--- a/envv.conf
+++ b/envv.conf
@@ -5,6 +5,5 @@ xwayland {
 
 env = XCURSOR_SIZE,15
 env = GDK_SCALE,1.25
-env = -u WAYLAND_DISPLAY alacritty
-env = WLR_DRM_DEVICES,/dev/dri/card0:/dev/dri/card1
+#env = WLR_DRM_DEVICES,/dev/dri/card0:/dev/dri/card1
 
