--- a/userprefs.conf
+++ b/userprefs.conf
@@ -69,7 +69,7 @@ bind = $mainMod SHIFT, M, exec, $xterm --class matrix --title matrix -e neo-matr
 bind = $mainMod SHIFT, Tab, workspace, e+1
 
 #Quicklaunch apps
-bind = ALT, A, exec, pkill rofi || ~/.config/hypr/scripts/quickapps.sh telegram-desktop discord steam obs stacer qjackctl protonvpn
+bind = ALT, A, exec, pkill rofi || ~/.config/hypr/scripts/quickapps.sh telegram-desktop discord steam obs stacer
 
 #game launcher
 bind = $mainMod SHIFT, G, exec, pkill rofi || ~/.config/hypr/scripts/gamelauncher.sh 4
@@ -98,7 +98,7 @@ windowrulev2 = opacity 0.80 0.80,class:^(org.kde.discover)$
 windowrulev2 = opacity 0.80 0.80,class:^(org.https://nomacs.nomacs)$
 windowrulev2 = opacity 0.80 0.80,class:^(lf)$
 windowrulev2 = opacity 0.80 0.80,class:^(tuxedo-control-center)$
-windowrulev2 = opacity 0.80 0.80,class:^(google-chrome)$
+windowrulev2 = opacity 0.90 0.90,class:^(google-chrome)$
 windowrulev2 = opacity 0.80 0.80,class:^(org.gnome.Calendar)$
 windowrulev2 = opacity 0.70 0.70,class:^(Alacritty)$
 windowrulev2 = opacity 0.80 0.80,class:^()$
